welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var biscuit=0
^Poucet:7: error: 'while' expected but '}' found.
}
^