welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var biscuit=0
do {
while (biscuit!>=3 && !croisement()) {avance; biscuit=biscuit+1;}